--- a/index.html
+++ b/index.html
@@ -1,11 +1,61 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<link rel="stylesheet" href="assets/style.css">
+	<title>Delicias na sua mesa 😋</title>
 </head>
+
 <body>
-	<p>delicias-na-sua-mesa</p>
+	<header>
+		<nav class="menu-nav">
+			<ul>
+				<li class="menu-nav-logo">
+					<a class="logo" href="#">
+						<img style="height: 4rem;" src="assets/Logo.png" alt="Logo">
+					</a>
+				</li>
+				<li style="width: 100%;"></li>
+				<li><a href="#">Home</a></li>
+				<li><a href="/content01.html">News</a></li>
+				<li><a href="#contact">Contact</a></li>
+			</ul>
+		</nav>
+	</header>
+
+	<main>
+		<div class="content">
+			<div class="right-sidebar"></div>
+			<div class="content-main">
+				<h2>Sobre nós</h1>
+					<div class="about">
+						<p>
+							Bem-vindo ao nosso portal de gastronomia! Aqui, você encontra as últimas notícias do
+							universo
+							gastronômico, tendências, eventos e novidades sobre culinária. Além disso, oferecemos dicas
+							e
+							receitas variadas, pensadas para todos os gostos e níveis de habilidade. Nosso objetivo é
+							inspirar você a explorar novos sabores e se conectar ao mundo da gastronomia de maneira
+							prática
+							e saborosa.
+						</p>
+						<img src="assets/Logo.png" alt="Logo">
+					</div>
+			</div>
+			<div class="left-sidebar"></div>
+		</div>
+	</main>
+
+	<footer>
+		<div style="
+				align-content: center;
+				height: 100%;
+				padding-right: 2rem;">
+			<a href="/contact.html">Contact</a>
+		</div>
+	</footer>
 </body>
+
 </html>
