--- a/news.html
+++ b/news.html
@@ -21,8 +21,8 @@
 					</a>
 				</li>
 					<ul class="menu-nav-list">
-						<li><a href="#">Home</a></li>
-						<li><a href="/content01.html">News</a></li>
+						<li><a href="/index.html">Home</a></li>
+						<li><a href="/news.html">News</a></li>
 						<li><a href="#contact">Contact</a></li>
 					</ul>
 				</ul>
@@ -39,7 +39,7 @@
 							Fique por dentro das novidades do mundo da gastronomia! Aqui no blog, você encontrará as últimas tendências, dicas de receitas e insights sobre o mercado de bares e restaurantes. Acompanhe as atualizações sobre o impacto de eventos sazonais, novidades no cardápio e como o setor está se adaptando às mudanças. 
 						</p>
 					</div>
-					<h2>Notícias em Destaque</h2>
+					<h2>últimas Notícias</h2>
 					<hr>
 					<div class="cards">
 						<div class="card-content-1">
