--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					</a>
 				</li>
 					<ul class="menu-nav-list">
-						<li><a href="#">Home</a></li>
+						<li><a href="/index.html">Home</a></li>
 						<li><a href="/news.html">News</a></li>
 						<li><a href="#contact">Contact</a></li>
 					</ul>
