--- a/content02.html
+++ b/content02.html
@@ -23,9 +23,9 @@
                     </a>
                 </li>
                 <ul class="menu-nav-list">
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="/news.html">News</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="/delicias-na-sua-mesa/index.html">Home</a></li>
+                    <li><a href="/delicias-na-sua-mesa/news.html">News</a></li>
+                    <li><a href="/delicias-na-sua-mesa/contact.html">Contact</a></li>
                 </ul>
             </ul>
         </nav>
