--- a/content03.html
+++ b/content03.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="assets/content-style.css">
+	<link rel="stylesheet" href="./assets/content-style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link
@@ -23,9 +23,9 @@
 					</a>
 				</li>
 				<ul class="menu-nav-list">
-					<li><a href="/index.html">Home</a></li>
-					<li><a href="/news.html">News</a></li>
-					<li><a href="#contact">Contact</a></li>
+					<li><a href="/delicias-na-sua-mesa/index.html">Home</a></li>
+					<li><a href="/delicias-na-sua-mesa/news.html">News</a></li>
+					<li><a href="/delicias-na-sua-mesa/contact.html">Contact</a></li>
 				</ul>
 			</ul>
 		</nav>
